Improve code style

--- a/Correlation, scatter plot, linear regression with "Mountain bikes" data set.ipynb
+++ b/Correlation, scatter plot, linear regression with "Mountain bikes" data set.ipynb
@@ -253,53 +253,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y-intercept: 1895.909091\n"
+      "y-intercept: 1895.909090909091\n"
      ]
     }
    ],
    "source": [
-    "print('y-intercept: %f' % model.intercept_[0])"
+    "print(f'y-intercept: {model.intercept_[0]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "slope: -40.454545\n"
+      "slope: -40.45454545454545\n"
      ]
     }
    ],
    "source": [
-    "print('slope: %f' % model.coef_[0])"
+    "print(f'slope: {model.coef_[0][0]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting a price of mountain bikes with the weight equal to 30 pounds: 682.272727\n"
+      "Predicting a price of mountain bikes with the weight equal to 30 pounds: 682.2727272727275\n"
      ]
     }
    ],
    "source": [
-    "print('Predicting a price of mountain bikes with the weight equal to 30 pounds: %f' % model.predict(30)[0][0])"
+    "print(f'Predicting a price of mountain bikes with the weight equal to 30 pounds: {model.predict(30)[0][0]}')"
    ]
   },
   {
