--- a/Linear regression for 'U.S. Temperatures' data set.ipynb
+++ b/Linear regression for 'U.S. Temperatures' data set.ipynb
@@ -229,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In 2010 the temperature will be 52.899. In 3000 the temperature will be 65.505. I have more faith in prediction for 2010, because it's not so far from data in this data set."
+    "In 2010 the temperature will be 52.899. In 3000 the temperature will be 65.505. I have more faith in prediction for 2010, because it's not so far from the data in this data set."
    ]
   },
   {
